...
  <string name="title_item_list">Notes</string>
  <string name="add_note">Add Note</string>
  <string name="title">Title</string>
  <string name="title_activity_list">리멤버미</string>
  <string name="search">Search</string>
  <string name="search_hint">Search in notes</string>
  <string name="content">Content</string>
  <string name="save">Save</string>
  <string name="share">Share</string>
  <string name="undo">Undo</string>
  <string name="trash">Trash</string>
  <string name="trash_action">Trash</string>
  <string name="trashed">trashed</string>
  <string name="note_trashed">Note(s) trashed</string>
...
  <string name="archive">Archive</string>
  <string name="unarchive">Restore from archive</string>
  <string name="creation">Created:</string>
  <string name="last_update">Updated:</string>
  <string name="delete_note_confirmation">Confirm note deletion?</string>
  <string name="confirm">Confirm</string>
  <string name="ok">Ok</string>
  <string name="no">No</string>
  <string name="failed">failed</string>
  <string name="cancel">Cancel</string>
  <string name="note_updated">Note updated</string>
  <string name="empty_note_not_saved">Can\'t save an empty note</string>
  <string name="empty_note_not_shared">Can\'t share an empty note</string>
...
  <string name="timestamp">Timestamp</string>
  <string name="pushbullet">Pushbullet</string>
  <string name="remove_location">Remove location?</string>
  <string name="remove_reminder">Remove reminder?</string>
  <string name="add_reminder">기한 설정</string>
  <string name="location_not_found">Location not found</string>
  <string name="record">Record</string>
  <string name="stop">Stop</string>
  <string name="no_app_to_handle_intent">No applications to handle file</string>
  <string name="storage_not_available">Storage not available</string>
  <string name="video">Video</string>
  <string name="feature_not_available_on_this_device">Feature unavailable on this device, sorry</string>
  <string name="error_occurred_deleting_note">Error while deleting note</string>
...
  <string name="tag">Tag</string>
  <string name="tags">Tags</string>
  <string name="add_tag">Add tags</string>
  <string name="select_tags">Select tag(s)</string>
  <string name="categories">Categories</string>
  <string name="edit_tag">Edit category</string>
  <string name="add_category">Add category</string>
  <string name="category_title">Title</string>
  <string name="category_description">Description</string>
  <string name="category_color">Color</string>
  <string name="category_saved">Category saved</string>
  <string name="category_deleted">Category deleted</string>
  <string name="category_missing_title">Category title missing</string>
  <string name="delete_this_category">Delete this category</string>
  <string name="category">Category</string>
  <string name="categorize_as">Categorize as</string>
  <string name="title_activity_category">Edit category</string>
  <string name="delete_unused_category_confirmation">Confirm category deletion?</string>
  <string name="delete_category_confirmation">This category is used by some notes.\nConfirm notes un-categorization and category deletion?</string>
  <string name="discard">Discard</string>
  <string name="remove_category">Remove category</string>
...
  <string name="text_note">사업 작성</string>
  <string name="photo">Photo</string>
  <string name="uncompleted_checklists">Incompleted checklists</string>
  <string name="info">Info</string>
  <string name="completed">Completed</string>
  <string name="undo_changes_note_confirmation">Confirm undoing changes?</string>
  <string name="done">Done</string>

  <!-- Settings -->
  <string name="dashclock_description">Displays some statistics and expiring reminders from Omni Notes</string>
  <string name="settings">Settings</string>
  <string name="settings_about">Info</string>
  <string name="settings_category_other">Other</string>
...
