...
      android:dividerHeight="0dp"
      android:listSelector="@drawable/icon_selector"
      android:scrollingCache="false"
      android:animationCache="false" />

    <include
      android:id="@+id/settings_view"
      layout="@layout/drawer_category_list_footer" />

    <it.feio.android.rememberme.models.views.NonScrollableListView
      android:id="@+id/drawer_tag_list"
      android:layout_width="@dimen/navigation_drawer_width"
      android:layout_height="wrap_content"
      android:choiceMode="singleChoice"
      android:divider="@android:color/transparent"
      android:dividerHeight="0dp"
      android:listSelector="@drawable/icon_selector"
...
