...
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
    android:id="@+id/menu_attachment"
    android:icon="@drawable/ic_attachment_white_24dp"
    android:orderInCategory="100"
    android:title="@string/attachment"
    app:showAsAction="always" />
  <item
      android:id="@+id/menu_category"
      android:icon="@drawable/ic_folder_special_white_24dp"
      android:orderInCategory="200"
      android:title="@string/category"
      android:visible="false"
      app:showAsAction="always" />
  <item
...
